soundtrack size reduced

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- Add the Birthday Sound -->
-    <audio id="birthdaySound" src="happy-birthday.mp3" preload="auto" loop></audio>
+    <audio id="birthdaySound" src="happybirthday.mp3" preload="auto" loop></audio>
 
     <!-- JavaScript to Play Sound -->
     <script>
